# when-the-chess

./: .gitignore  CMakeLists.txt  IDEAS.md  README.md  cmakebuild.sh
assets/images/: README.md
include/: events.hpp  gameloop.hpp  lboard.hpp  renderer.hpp  utils.hpp
src/: events.cpp  gameloop.cpp  lboard.cpp  main.cpp  renderer.cpp
